peac_dev/force-app/main/default/objects/DnB_Credentials__c/DnB_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>to access API calls for Dun and Bradstreet.</description>
    <label>DnB Credentials</label>
</CustomObject>