peac_dev/force-app/main/default/objects/DnB_Credentials__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>