peac_dev/force-app/main/default/objects/DnB_Credentials__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Secret</label>
    <length>80</length>
    <type>Text</type>
</CustomField>