peac_dev/force-app/main/default/objects/DnB_Credentials__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>